# NexCast

./: README.md
backend-core/: .gitignore  README-DOCKER.md  pyproject.toml  run_server.py  test_services.py  test_websocket.py
backend-core/app/: main.py
backend-core/app/config/: .env.example
backend-core/app/routes/: __init__.py  ws_stream.py
backend-core/app/services/: __init__.py  llm.py  pipeline.py  tts.py  vision.py
backend-core/deploy/: launch.sh
backend-lambda/: .env.example  serverless.yml
backend-lambda/.serverless/: meta.json
backend-lambda/db/: schema.sql
backend-lambda/db/migrations/: 001_add_session_preferences.sql
backend-lambda/functions/: history.py  session.py
frontend/NexCast/: .env.example  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/NexCast/src/: App.tsx  index.css  main.tsx
frontend/NexCast/src/components/: Dashboard.tsx  History.tsx  PreferencesPanel.tsx  ScreenPreview.tsx  SessionControl.tsx  SideBar.tsx
frontend/NexCast/src/hooks/: useScreenCapture.ts  useWebSocketAudio.ts
frontend/NexCast/src/interfaces/: capture.ts  session.ts  voice.ts  websocket.ts
frontend/NexCast/src/pages/: About.tsx  Playground.tsx  SessionHistory.tsx  Settings.tsx  VoiceLibrary.tsx
frontend/NexCast/src/services/: api.ts
